scrollbar colour setting

--- a/travelo/src/index.css
+++ b/travelo/src/index.css
@@ -15,4 +15,12 @@ body {
     sans-serif;
   
 }
+::-webkit-scrollbar{
+  width:0.6rem;
+  background-color: #14213d;
+
+}
+::-webkit-scrollbar-thumb{
+  background-color: #4539e6;
+}
 
